--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {
+h1 {
+    font-size: 30px;
+    text-align: center;
+}
+
+p {
     text-align: center;
     color:red;
     font-size: 20px;
