--- a/style.css
+++ b/style.css
@@ -18,4 +18,10 @@ body {
     padding: 5px;
     background-color: white;
     margin: 20px;
+    border-radius: 10px;
 }
+
+.classe-banner {
+    text-align: center;
+}
+
